 hw-03/answer_exercise_1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.4-alpine
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 20m
              memory: "128Mi"
            requests:
              cpu: 20m
              memory: "128Mi"
