 hw-03/answer_exercise_1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-server
  ports:
    - name: http
      targetPort: 80
      port: 8080
